# decennial-headship-rates

./: .gitignore  README.md  metro_headship_rates.ipynb  psrc_headship_rates_2000-2020.ipynb  pums_1yr_headship_rates.ipynb  pyproject.toml
notebook_styling/: custom.scss
util/: __init__.py  census_helpers.py
